# cosi119_src

./: CMakeLists.txt  package.xml  platform3.urdf  simple_action_client.py  topic_subscriber.py  turtle_tf2_broadcaster.py
basic_mover/: CMakeLists.txt  README.md  package.xml
basic_mover/src/: basic_mover.py  my_odom.py  my_odom_alt.py
data/: lidar.csv  lidar_csv.py
double_follow/: CMakeLists.txt  package.xml  video.txt
double_follow/launch/: tf2_demo.launch
double_follow/src/: turtle_tf2_broadcaster.py  turtle_tf2_listener.py
fiducial_nav/: CMakeLists.txt  README.md  package.xml  tf_cheatsheet.md
fiducial_nav/launch/: fiducials_real.launch  fiducials_sim.launch
fiducial_nav/src/: mapper_sim.py  my_odom.py  nav_sim.py  org_mapper_real.py  org_nav_real.py
fiducial_nav/worlds/: fiducials.world
line_follower/: CMakeLists.txt  HSVConfig.cfg  README.md  package.xml
line_follower/launch/: line_follower_sim.launch
line_follower/src/: line_follower_real.py  line_follower_sim.py
maze_solver/: CMakeLists.txt  README.md  package.xml
maze_solver/config/: acml_params.yaml
maze_solver/launch/: acml.launch  maze.launch  move_base.launch
maze_solver/maps/: maze_map.yaml
maze_solver/models/maze/: model.sdf
maze_solver/src/: maze_solver_map.py  maze_solver_real.py  maze_solver_sim.py
maze_solver/worlds/: maze.world
samples/: CMakeLists.txt  package.xml
samples/cfg/: cvexample.cfg
samples/launch/: linemission.launch  tf2_demo.launch  world_1.launch  world_2.launch  world_3.launch
samples/src/: README.md  Untitled.ipynb  avoid.py  broadcaster.py  bt_example.py  cvexample.py  fsm_example.py  key_controller.py  key_publisher.py  keys_to_twist.py  keys_to_twist_using_rate.py  main_publisher.py  move_base.dot  patrol.py  simple_action_server.py  spawn_turtles.py  topic_publisher.py  topic_subscriber.py  turtle_tf2_listener.py  wander.py
samples/urdf/: platform3.urdf
samples/worlds/: world_1.world  world_2.world  world_3.world
src/: topic_publisher.py
wall_follower/: CMakeLists.txt  README.md  package.xml
wall_follower/src/: wall_follower.py
