<?xml version="1.0"?>
<package format="2">
  <name>double_follow</name>
  <version>0.0.0</version>
  <description>The double follow package for ROS, simulating multiple turtles following a leader.</description>

  <!-- Maintainer information -->
  <maintainer email="your.email@example.com">Your Name</maintainer>

  <!-- License type -->
  <license>BSD</license>

  <!-- URLs for documentation and repositories -->
  <url type="website">http://wiki.ros.org/double_follow</url>
  <url type="repository">https://github.com/yourusername/double_follow</url>
  <url type="bugtracker">https://github.com/yourusername/double_follow/issues</url>

  <!-- Author information -->
  <author email="your.email@example.com">Your Name</author>

  <!-- Package dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Export additional information -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
